--- a/src/main/webapp/seller/contract/xf/oldEdit.xhtml
+++ b/src/main/webapp/seller/contract/xf/oldEdit.xhtml
@@ -101,7 +101,7 @@
 
                     <b:navLink value="删除" onclick="$('.modalPseudoClass').modal();return false;"  href="#"></b:navLink>
 
-                    <b:navCommandLink value="完成" action="#{contractFile.completeContract}" ajax="true" update="@none">
+                    <b:navCommandLink value="完成" action="#{contractFile.completeContract}" >
                         <f:param name="contractId" value="#{contractHome.instance.id}"/>
                         <f:param name="houseSaleInfoId" value="#{houseSourceHome.instance.id}"/>
                     </b:navCommandLink>
